# api_cartao_list

./: Dockerfile  __main__.py  app.py  dev-requirements.txt  pyproject.toml  readme.md  requirements.txt  test_cartao_repository_fix.py
src/api_cartao_list.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: database.py  settings.py
src/model/: cartao_model.py
src/repositories/: cartao_repository.py
src/routers/: cartao_router.py
src/routes/: cartao_routes.py
src/schemas/: cartao_schemas.py
src/scripts/: create_indexes.py
src/services/: cartao_service.py  pessoa_client.py
tests/: run_tests.py
tests/unit/: test_cartao_list.py
