[project]
name = "api-cartao-list"
version = "1.0.0"
description = "" #TODO: Add a short description of your package
authors = [{name = "Your Name", email = "your@email.com"}] #TODO: Add your name and email
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]

# Runtime dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "databases[postgresql]>=0.7.0",
    "asyncpg>=0.27.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]
# TODO: add your CLI entry points here
